--- a/LabI/HelloWorld/app/src/main/res/layout/activity_display_message.xml
+++ b/LabI/HelloWorld/app/src/main/res/layout/activity_display_message.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.ServerActivity">
+    tools:context="de.world.hello.christos.assignment1.main.ServerActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
